@@ -1,18 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST random-stream-0.1.1.tar.gz 3426 SHA256 c6f48de53efd13c331afa13834d68b07e8c85e51d20e12f4cb5f5638fe0c2960 SHA512 2cf39a1df75a9fa8a651124adf22413cee94655348835d81d83ac428a6ab5b2d89d52388a3e3ee0c813bc74cfc507063e6f150f4718ac8c11f1c9dc85f2ea239 WHIRLPOOL 019982732b17e42b9a5be32e21db48f28c052a5ea08487421fb1f6663fe6b2e70424774b5bcc72b4c193965485b30cf09b2e478c9e25c792354f748c2acb5670
-EBUILD random-stream-0.1.1.ebuild 947 SHA256 ccdceaea9cf80346c0a32d3c0f0d9354c8aa3c751941f974c5d10f0b567d3672 SHA512 eba9b84a07e4445875d17b4fb061a4b1a1c0ffea20bf16e83f410d8f09407c647967f1a038f194ab64274083c04f5fd238d576d3dae63bcd412031262a2ea172 WHIRLPOOL 3cd932b20f92182691af106d7b92ac778deb017780deb323b15b2edb59893318df96296fd27f1e7410a225035cb0b2d1a124d329f0b09345a4d0b77da40d07e6
-MISC ChangeLog 647 SHA256 ce002ebba05e4aa659f23313b85a608de498b9296e74e790e29745c2954ae057 SHA512 14daaf59c2893f779a1a3e22df4b398e63071ba366c5e6ae0ddd4a4e407ef0fba8b569798343a57a926bd765c0e715a14b6756b6f561bc35d2d650460cb24fea WHIRLPOOL 483a5f0f434233fcb16e3a4cbcfdf87baa413e4d2f7694940433545f0fd3ed590dbf74fc50eab2c7d212ae43011043ad2ed997797ea6002f59bb7e94374ec2b3
-MISC metadata.xml 418 SHA256 df17b837d63892c7a46aaeb527e9d7ab1dc52a0680397945f9a9bcd1f0096d9d SHA512 735086e9813fd620c21bfb32f408529d5e092376d95307b0f8395528f4e2bb02fe3645a2e34c8b26c4dcfc5064952b2879da058052905aa5d28b254d6c650773 WHIRLPOOL 15639574a412a154db2f90d244613fffb047f8e1712500ba4008a454159f234980139a6ab05dac687f04d82cc57263bfd35479d2a077ec8b730132a4167ee899
+DIST random-stream-0.1.1.tar.gz 3426 BLAKE2B dfb08b355e6beec545ee0060b474a79e58950c77e2003d368bb0f11b656c84adb19877f8112831abd5549bf7082e79ec0c4ff645c44539190692bcb13d1f8dbb SHA512 2cf39a1df75a9fa8a651124adf22413cee94655348835d81d83ac428a6ab5b2d89d52388a3e3ee0c813bc74cfc507063e6f150f4718ac8c11f1c9dc85f2ea239
+EBUILD random-stream-0.1.1.ebuild 863 BLAKE2B 3b55487f9c30985631f1ca819ede7e72bf0890456b9540ff796648128c36a9cbc18f54cb6b886335c95212257bf5d85698fd056f8b06e35ea6f1cf681a9c3008 SHA512 3250e3739acbeedc6624e8ed62a82e5363a9ad23d19b8d772ea16dac2170fab3a544cfe27bc9209ac43dbc94a3f3f5575bb3899e1b667d5627be4f9f5b751eba
+MISC ChangeLog 783 BLAKE2B a37dd1207e924800185ded4ac08c4fd59e0c9eb4e035970866affc14648ca99df8c9e8f304146444a18df08a364d2c556ad45c123f74aa1d3a007754e52f87c5 SHA512 7f281480c78da155045b9717f6e659331e91a029e4872d863d214eca1d02450300f1124447ec9364f62346a36da62db51918e11c1c7d6d332d584b099ebbd76f
+MISC metadata.xml 432 BLAKE2B b3f11044cf17836309d487e3e6524ce1c705df819ecdf3ed501910b1d6addaa51ab53ef751f74082b27db9aaa440ab5ba5832abf4569d1b5975de7ea5ba82d74 SHA512 986dbe7f50317b0e78c9423e94bcd96cb48f431b8330002a30cde1133e27ffdf7fce85d71c0babca9b2e801a015eb3f12dfa671a1d0b850e5018d1b4def2d876
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVcHwSAAoJEKXBodJLEo5SLCAIAIJNtGDB7U6Vr/6hz2ez+bUG
-zn5SSFk51V3zlEWalr6AXe8FFVWN2lTOCQ8LlJHduO73FPrRAkr79LYqR9jadI10
-vPv4KURH641r5Z7gQnh5TqrF38kXwZkZIfo0jq7EMi89YZWwX1WAWpf7OqVwwMCf
-CTUPgFP908dsMGDZfOajSYpqaLq170O6UZ4Wiusy3l2Pxea88iqF33kFKIuV2YAr
-C7XPIIdJdbqnETNQn/ay8dd89HnvPElrHZqFPx0kKB5p2bVz+xe+x4Yp4PH04qZT
-2jcypdWg1sjL7D2aiprs6VXdwiWQPO7zhUmv1/vfFlWYFbabciN5s+fZ3cTKIUU=
-=njYa
+iQIzBAEBCAAdFiEEfxbTlVjbAaSxX4Ek8tyApW4P2M0FAmDpnIAACgkQ8tyApW4P
+2M2OCA/9F1247DxGo4a3OEgFcMdJncrnByZSz4BUiuDvcpK/Q/WRnrbLHNkHQNdF
+LiK/6hbsywSbaV2xFzjXGRXLwguVpyMd7ZwqamTYuX3MCZZ5rj/A/YlvznkNFlhi
+8b+Wp/CLu5uaq9Pxn5qP7VIZabRjX57bo3sByQi/bGYJvJ+PYFmLn8pnvvCUPfZ6
+qQ2XKfajBSI5a2kNrQ8l/L8zHBH6SDoLcQ635yxa7oFFhQx2M8SphysInzRMvqV3
+bbvsaYBoEntlhfmNtXefF4azF3f2rL2198CCqfxwHCI5jdpANF2MxMIYYUNYkAyp
+O/dL/y4kGMKC/h3440Wla26rf7hcMIEQ5S3ub8rjkKAS3ptHR23+yvEOZYz1SRQB
+v56N+MBRSeqlbrj9trfuqAKhCQYAay+castdWT/zgAHc1LTywZj0GhtErJADSqTk
+n3F4nRlugPgDE+EkUTNkx4qq31OWO+e+qrFDOJVDdTwDMH4vKWD/xbGLjQGJDjbA
+EKHc7F37aDEcXXNMriWJdeXgMdLjsIsuWBEA3HMru+4SF9JYsS9CFJM2i42qK9LD
+Q/bs/J8LiEyWR5nbjYW2YHIEkgbW/k7olNa6cLnjHogUU2RBHqcgV7m0fHpv05TU
+AMoAdTHEjGdoZ4XglyoS6IDGIFjHmQYmq1fjTPIhMACG9Gdw2e4=
+=7851
 -----END PGP SIGNATURE-----
