@@ -1,24 +1,19 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2021 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
-# $Header:  $
 
-# ebuild generated by hackport 0.2.13
-
-EAPI="5"
+EAPI="7"
 
 CABAL_FEATURES="lib profile haddock hscolour"
 inherit haskell-cabal
 
 DESCRIPTION="An infinite stream of random data"
 HOMEPAGE="http://hackage.haskell.org/package/random-stream"
-SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
+SRC_URI="https://hackage.haskell.org/package/${P}/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="urandom openssl"
-
-#TODO: add winrandom?
 
 RDEPEND="dev-haskell/binary
 		>=dev-lang/ghc-6.8.2
