@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/random-stream
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2021 Gentoo Authors; Distributed under the GPL v2
 # $Header: $
+
+  10 Jul 2021;  <klondike@gentoo.org> metadata.xml, random-stream-0.1.1.ebuild:
+  dev-haskell/random-stream: Update to EAPI=7 and dl link
 
   04 Jun 2015; Francisco Blas Izquierdo Riera (klondike) metadata.xml:
   Update the metadata.xml with my gentoo e-mail
